--- a/views/404.html
+++ b/views/404.html
@@ -1,51 +1,27 @@
 <html>
 <head>
 	<title>Seismic GeneBase</title>
+	<!-- absolute path to capture multiple "/" -->
+	<base href="/json-db-servlet/">
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+	<link href="stylesheets/common.css" rel="stylesheet">
+	<link href="images/bio.ico" rel="shortcut icon">
 	<style>
-		body {
-			margin: 0;
-			font-family: 'Nunito Sans', sans-serif;
-			background-image: url('images/sky-corn.jpg');
-			background-size: 100%; 
-		}
 		#primary {
-			background-color: rgba(255, 255, 255, 0.5);
-			text-align: center;
-			position: absolute;
-			left: 50%;
-			top: 50%;
 			/* center */
 			width: 750px;
 			margin-left: -375px;
-			height: 300px;
-			margin-top: -150px;
+			height: 150px;
+			margin-top: -75px;
+			line-height: 150px;
 		}
 	</style>
 </head>
 <body>
 
 <div id="primary">
-	<h1>Oops! Perhaps you took a wrong turn?</h1>
+	<h1 style="margin: 0">Oops! Perhaps you took a wrong turn?</h1>
 </div>
-	
-<script src="javascripts/jquery.js"></script>
-<script>
-function send(){
-	$.ajax({
-		url: "servlet/ServletCore",
-		method: "POST",
-		success: receive,
-		data: {
-			searchword: $("#key").val()
-		}
-	});
-}
-
-function receive(data, status, jqXHR) {
-	$("#out").text(data);
-}
-</script>
 
 </body>
 </html>
